{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 15,
  "lineage": "226a68e0-c829-12b3-b10a-9f3dea427cc4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "linux_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/linux-NSG",
            "location": "westeurope",
            "name": "linux-NSG",
            "resource_group_name": "demoapp001-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "storage_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/storage-NSG",
            "location": "westeurope",
            "name": "storage-NSG",
            "resource_group_name": "demoapp001-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "windows_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/windows-NSG",
            "location": "westeurope",
            "name": "windows-NSG",
            "resource_group_name": "demoapp001-dev",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allowHTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/storage-NSG/securityRules/Allow_HTTPS",
            "name": "Allow_HTTPS",
            "network_security_group_name": "storage-NSG",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "demoapp001-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.storage_nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allowRDP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/windows-NSG/securityRules/Allow_RDP_for_everyone",
            "name": "Allow_RDP_for_everyone",
            "network_security_group_name": "windows-NSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "demoapp001-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.windows_nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allowSSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/linux-NSG/securityRules/Allow_SSH",
            "name": "Allow_SSH",
            "network_security_group_name": "linux-NSG",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "demoapp001-dev",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.linux_nsg",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.6.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demoapp001-dev",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "linux_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/linux_subnet",
            "name": "linux_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demoapp001-dev",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "storage_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/general_subnet",
            "name": "general_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demoapp001-dev",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "windows_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/windows_subnet",
            "name": "windows_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "demoapp001-dev",
            "virtual_network_name": "dev-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "linux_nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/linux_subnet",
            "network_security_group_id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/linux-NSG",
            "subnet_id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/linux_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.linux_nsg",
            "azurerm_subnet.linux_subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "storage_nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/general_subnet",
            "network_security_group_id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/storage-NSG",
            "subnet_id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/general_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.storage_nsg",
            "azurerm_subnet.storage_subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "windows_nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/windows_subnet",
            "network_security_group_id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/networkSecurityGroups/windows-NSG",
            "subnet_id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet/subnets/windows_subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.windows_nsg",
            "azurerm_subnet.windows_subnet",
            "azurerm_virtual_network.vnet",
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c29658a2-724b-417a-82e0-743fa8d11236",
            "id": "/subscriptions/d8dc14ed-3276-442c-a5a9-1b3c76eb6c45/resourceGroups/demoapp001-dev/providers/Microsoft.Network/virtualNetworks/dev-vnet",
            "location": "westeurope",
            "name": "dev-vnet",
            "resource_group_name": "demoapp001-dev"
          },
          "dependencies": [
            "data.azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}